infrastructure/kubernetes/manifests/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: pdf-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - saturnin.bm-backend.ovh
    secretName: portfolio-tls
  rules:
  - host: saturnin.bm-backend.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-django-service
            port:
              number: 8002
